@@ -50,6 +50,7 @@
 - fix off-by-one error for lookup of map keys exactly 255 characters long.
 - improve handling of server not available.
 - fix LDAP_URI server selection.
+- add authentication option for using an external credential cache.
 
 18/06/2007 autofs-5.0.2
 -----------------------
